node server works

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1",
   "description": "nextjs + aws lambda test",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node ./app.js"
+  }
 }
