--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./app.js"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "^4.0.0-beta.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
